--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -194,7 +194,7 @@
 									</div> 
 									<div class="row text-center no-gutter"> 
 										<div class="col-xs-6"> 
-											<span class="h4 font-bold m-t block"><%= @download_data %> MB</span> 
+											<span class="h4 font-bold m-t block"><%= (@download_data/1024).round(2) %> GB</span> 
 											<small class="text-muted m-b block">Download Data</small> 
 										</div> 
 										<!-- <div class="col-xs-3"> 
@@ -206,7 +206,7 @@
 											<small class="text-muted m-b block">Connections</small> 
 										</div>  -->
 										<div class="col-xs-6"> 
-											<span class="h4 font-bold m-t block"><%= @upload_data %> MB</span> 
+											<span class="h4 font-bold m-t block"><%= (@upload_data/1024).round(2) %> GB</span> 
 											<small class="text-muted m-b block">Upload Data</small> 
 										</div> 
 									</div> 
@@ -579,7 +579,7 @@
    var great16 = 0 ;
 
   	<% @wifis.each do |wifi| %>
-  		if(<%= wifi.avg_speed.present?){
+  		if(<%= wifi.avg_speed.present? %>){
 	  		if(<%= wifi.avg_speed %> <= 2048){
 	  			less2 = less2 + 1;
 	  		}else
