--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,4 +1,4 @@
-<section class="scrollable padder"> 
+<section class="scrollable padder" style="overflow: scroll;"> 
 	<div class="m-b-md"> 
 		<h3 class="m-b-none">Users</h3> 
 	</div> 
@@ -10,11 +10,11 @@
 			<table id='users' class="table table-striped m-b-none" data-ride="datatables"> 
 				<thead> 
 					<tr> 
-						<th width="20%">First Name</th> 
-						<th width="20%">Last Name</th> 
+						<th width="19%">First Name</th> 
+						<th width="19%">Last Name</th> 
 						<th width="25%">Email</th> 
 						<th width="15%">Mobile Number</th> 
-						<th width="20%">Successfully Terminated</th>
+						<th width="22%">Successfully Terminated</th>
 					</tr> 
 				</thead> 
 				<tbody> 
