--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -593,7 +593,7 @@
 			<!-- /.aside --> 
 
 
-			<section id="content"> 
+			<section id="content" style="overflow: scroll;"> 
 				<section class="hbox stretch"> 
 					<%= yield %>
 				</section> 
