--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,4 +1,4 @@
-<section class="scrollable padder" style="overflow: scroll;"> 
+<section class="scrollable padder"> 
 	<div class="m-b-md"> 
 		<h3 class="m-b-none">Users</h3> 
 	</div> 
