--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,6 +1,6 @@
 <section class="scrollable padder"> 
 	<div class="m-b-md"> 
-		<h3 class="m-b-none">Users</h3> 
+		<!-- <h3 class="m-b-none">Users</h3>  -->
 	</div> 
 	<section class="panel panel-default"> 
 		<header class="panel-heading"> Users 
