--- a/app/views/admin/connections.html.erb
+++ b/app/views/admin/connections.html.erb
@@ -1,6 +1,56 @@
 <section class="scrollable padder"> 
+	<div class=""> 
+			<section> 
+				<header class="font-bold padder-v"> 
+					<!-- <div class="pull-right"> 
+						<div class="btn-group"> 
+							<button data-toggle="dropdown" class="btn btn-sm btn-rounded btn-default dropdown-toggle">
+								<span class="dropdown-label">Week</span> 
+								<span class="caret"></span> 
+							</button> 
+							<ul class="dropdown-menu dropdown-select"> 
+								<li>
+									<a href="index.html#">
+										<input type="radio" name="b">Month
+									</a>
+								</li> 
+								<li>
+									<a href="index.html#">
+										<input type="radio" name="b">Week
+									</a>
+								</li> 
+								<li>
+									<a href="index.html#">
+										<input type="radio" name="b">Day
+									</a>
+								</li> 
+							</ul> 
+						</div> 
+						<a href="index.html#" class="btn btn-default btn-icon btn-rounded btn-sm">Go</a> 
+					</div> --> Data Usage
+				</header> 
+				<div class="panel-body"> 
+					<div id="flot-sp1ine" style="height:250px"></div> 
+				</div> 
+				<div class="row text-center no-gutter"> 
+					<div class="col-xs-4"> 
+						<span class="h4 font-bold m-t block"><%= (@download_data/1024).round(2) %> GB</span> 
+						<small class="text-muted m-b block" style="color: #1d89cf;">Download Data</small> 
+					</div> 
+					<div class="col-xs-4"> 
+						<span class="h4 font-bold m-t block"><%= (@upload_data/1024).round(2) %> GB</span> 
+						<small class="text-muted m-b block" style="color: #1aae88;">Upload Data</small> 
+					</div> 
+					<div class="col-xs-4"> 
+						<span class="h4 font-bold m-t block"><%= (@total_earning/1000).round(2) %> K</span> 
+						<small class="text-muted m-b block" style="color: #e33244;">Earning</small> 
+					</div> 
+				</div> 
+			</section> 
+		</div>
+
 	<div class="m-b-md"> 
-		<h3 class="m-b-none">Connections</h3> 
+		<!-- <h3 class="m-b-none">Connections</h3>  -->
 	</div> 
 	<section class="panel panel-default"> 
 		<header class="panel-heading"> Connections 
@@ -231,6 +281,15 @@
 	</section> 
 </section>
 
+
+<script src="js/charts/flot/jquery.flot.min.js"></script> 
+<script src="js/charts/flot/jquery.flot.tooltip.min.js"></script> 
+<script src="js/charts/flot/jquery.flot.spline.js"></script> 
+<script src="js/charts/flot/jquery.flot.pie.min.js"></script> 
+<script src="js/charts/flot/jquery.flot.resize.js"></script> 
+<script src="js/charts/flot/jquery.flot.grow.js"></script> 
+<script src="js/charts/flot/demo.js"></script>
+
 <script>
   $(function () {
     //$("#connections").DataTable();
@@ -242,5 +301,61 @@
       "info": true,
       "autoWidth": true
     });
+
+    var d0 = [];
+    var d00 = [];
+    var d000 = [];
+
+	<% @connection.limit(50).each_with_index do |con , ind| %>
+	  d0.push([<%= ind %>, parseInt(Math.floor(<%= con.download_data %>))]);
+	  d00.push([<%= ind %>, parseInt(Math.floor(<%= con.upload_data %>))]);
+	  d000.push([<%= ind %>, parseInt(Math.floor(<%= con.total_bill %>))]);
+	<% end %>
+
+  	$("#flot-sp1ine").length && $.plot($("#flot-sp1ine"), [
+          d0, d00 , d000
+      ],
+      {
+        series: {
+            lines: {
+                show: false
+            },
+            splines: {
+              show: true,
+              tension: 0.4,
+              lineWidth: 1,
+              fill: 0.4
+            },
+            points: {
+                radius: 0,
+                show: true
+            },
+            shadowSize: 2
+        },
+        grid: {
+            hoverable: true,
+            clickable: true,
+            tickColor: "#d9dee9",
+            borderWidth: 1,
+            color: '#d9dee9'
+        },
+        colors: [ "#1d89cf","#1aae88", "#e33244"],
+        xaxis:{
+        },
+        yaxis: {
+          ticks: 4
+        },
+        tooltip: true,
+        tooltipOpts: {
+          content: "%y.4",
+          defaultTheme: false,
+          shifts: {
+            x: 0,
+            y: 20
+          }
+        }
+      }
+  	);
   });
 </script>
+
