--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -83,7 +83,7 @@
 												</span> 
 												<span class="clear"> 
 													<span class="h3 block m-t-xs text-primary"><%= (@total_earning/1000).round(2) %> K</span> 
-													<small class="text-muted text-u-c">Total Earning</small> 
+													<small class="text-muted text-u-c">Total Transaction</small> 
 												</span> 
 											</a> 
 										</div> 
@@ -98,16 +98,10 @@
 										</a> 
 									</div> 
 									<div class="padder-v text-center clearfix">
-										<div class="col-xs-6 b-r"> 
+										<div class="col-xs-12"> 
 											<div class="h3 font-bold"><%= (@total_earning/1000).round %> K</div> 
-											<small class="text-muted">Earning</small> 
-										</div> 
-										<div class="col-xs-6"> 
-											<div class="h3 font-bold"><%= ((@download_data + @upload_data)/1024).round(2) %>
-												<small class="text-muted"> GB</small>
-											</div> 
-											<small class="text-muted">Data Usage</small> 
-										</div> 
+											<small class="text-muted">Transaction</small> 
+										</div>  
 									</div> 
 								</div> 
 							</div> 
@@ -115,17 +109,15 @@
 								<div class="panel b-a"> 
 									<div class="panel-heading no-border bg-info lter text-center"> 
 										<a > 
-											<i class="fa fa-twitter fa fa-3x m-t m-b text-white"></i>
+											<i class="i i-download2 fa fa-3x m-t m-b text-white"></i>
 										</a> 
 									</div> 
 									<div class="padder-v text-center clearfix"> 
-										<div class="col-xs-6 b-r"> 
-											<div class="h3 font-bold">27k</div> 
-											<small class="text-muted">Tweets</small> 
-										</div> 
-										<div class="col-xs-6"> 
-											<div class="h3 font-bold">15k</div> 
-											<small class="text-muted">Followers</small> 
+										<div class="col-xs-12"> 
+											<div class="h3 font-bold"><%= ((@download_data + @upload_data)/1024).round(2) %>
+												<small class="text-muted"> GB</small>
+											</div> 
+											<small class="text-muted">Data Usage</small> 
 										</div> 
 									</div> 
 								</div> 
@@ -159,111 +151,44 @@
 							 </div> 
 						</div> 
 						<div class="row bg-light dk m-b"> 
-							<div class="col-md-6 dker"> 
-								<section> 
-									<header class="font-bold padder-v"> 
-										<!-- <div class="pull-right"> 
-											<div class="btn-group"> 
-												<button data-toggle="dropdown" class="btn btn-sm btn-rounded btn-default dropdown-toggle">
-													<span class="dropdown-label">Week</span> 
-													<span class="caret"></span> 
-												</button> 
-												<ul class="dropdown-menu dropdown-select"> 
-													<li>
-														<a href="index.html#">
-															<input type="radio" name="b">Month
-														</a>
-													</li> 
-													<li>
-														<a href="index.html#">
-															<input type="radio" name="b">Week
-														</a>
-													</li> 
-													<li>
-														<a href="index.html#">
-															<input type="radio" name="b">Day
-														</a>
-													</li> 
-												</ul> 
-											</div> 
-											<a href="index.html#" class="btn btn-default btn-icon btn-rounded btn-sm">Go</a> 
-										</div> --> Data Usage
-									</header> 
-									<div class="panel-body"> 
-										<div id="flot-sp1ine" style="height:210px"></div> 
-									</div> 
-									<div class="row text-center no-gutter"> 
-										<div class="col-xs-6"> 
-											<span class="h4 font-bold m-t block"><%= (@download_data/1024).round(2) %> GB</span> 
-											<small class="text-muted m-b block">Download Data</small> 
-										</div> 
-										<!-- <div class="col-xs-3"> 
-											<span class="h4 font-bold m-t block"><%= @wifis.count %></span> 
-											<small class="text-muted m-b block">Wifis</small> 
-										</div> 
-										<div class="col-xs-3"> 
-											<span class="h4 font-bold m-t block"><%= @connections.count %></span> 
-											<small class="text-muted m-b block">Connections</small> 
-										</div>  -->
-										<div class="col-xs-6"> 
-											<span class="h4 font-bold m-t block"><%= (@upload_data/1024).round(2) %> GB</span> 
-											<small class="text-muted m-b block">Upload Data</small> 
-										</div> 
-									</div> 
-								</section> 
-							</div> 
-							<div class="col-md-6"> 
-								<section> 
-									<header class="font-bold padder-v"> 
-										<!-- <div class="btn-group pull-right"> 
-											<button data-toggle="dropdown" class="btn btn-sm btn-rounded btn-default dropdown-toggle"> 
-												<span class="dropdown-label">Last 24 Hours</span> 
-												<span class="caret"></span> 
-											</button> 
-											<ul class="dropdown-menu dropdown-select"> 
-												<li>
-													<a href="index.html#">
-														<input type="radio" name="a">Today
-													</a>
-												</li> 
-												<li>
-													<a href="index.html#">
-														<input type="radio" name="a">Yesterday
-													</a>
-												</li> 
-												<li>
-													<a href="index.html#">
-														<input type="radio" name="a">Last 24 Hours
-													</a>
-												</li> 
-												<li>
-													<a href="index.html#">
-														<input type="radio" name="a">Last 7 Days
-													</a>
-												</li> 
-												<li>
-													<a href="index.html#">
-														<input type="radio" name="a">Last 30 days
-													</a>
-												</li> 
-												<li>
-													<a href="index.html#">
-														<input type="radio" name="a">Last Month
-													</a>
-												</li> 
-												<li>
-													<a href="index.html#">
-														<input type="radio" name="a">All Time
-													</a>
-												</li> 
-											</ul> 
-										</div> --> Wifi Speed
-									</header> 
-									<div class="panel-body flot-legend"> 
-										<div id="flot-pie-donut" style="height:240px"></div> 
-									</div> 
-								</section> 
-							</div> 
+						<div class="col-md-12 dker">
+							 	<div class="panel-heading b-b">World Map</div> 
+							 	<div class="panel-body"> 
+							 		<div class="h3 m-b font-thin">Registered Wifi around the globe</div> 
+							 		<!-- <p class="m-b-lg text-muted">This map is based on data available at 
+							 			<a href="http://www.naturalearthdata.com/downloads/110m-cultural-vectors/110m-admin-0-countries/">http://www.naturalearthdata.com</a>. Data is in 
+							 			<a href="http://www.naturalearthdata.com/about/terms-of-use/">public domain</a> .-->
+							 		</p> 
+							 		<div class="row"> 
+							 			<div class="col-sm-12"> 
+							 				<div id="world_map" style="height:350px;"> </div> 
+							 				<div class="hidden m-t-xl m-b clearfix"> 
+							 					<i class="i i-local i-2x text-info pull-left m-r m-l m-t-xs"></i> 
+							 					<div class="clear text-sm"> Countries distinguish between metropolitan (homeland) and independent and semi-independent portions of sovereign states. </div> 
+							 				</div> 
+							 			</div> 
+							 			<div class="hidden col-sm-4"> 
+							 				<div class="h4 m-b font-thin">Statistics</div> 
+							 				<p class="m-b-xs">Population growth</p> 
+							 				<div class="progress progress-xs"> 
+							 					<div class="progress-bar bg-primary" data-toggle="tooltip" data-original-title="80%" style="width: 80%"></div> 
+							 				</div> 
+							 				<p class="m-b-xs">Desertification</p> 
+							 				<div class="progress progress-xs"> 
+							 					<div class="progress-bar bg-success" data-toggle="tooltip" data-original-title="60%" style="width: 60%"></div> 
+							 				</div> 
+							 				<p class="m-b-xs">Natural Disasters</p> 
+							 				<div class="progress progress-xs"> 
+							 					<div class="progress-bar bg-warning" data-toggle="tooltip" data-original-title="70%" style="width: 70%"></div> 
+							 				</div> 
+							 				<p class="m-b-xs">World Forest</p> 
+							 				<div class="progress progress-xs"> 
+							 					<div class="progress-bar bg-dark lter" data-toggle="tooltip" data-original-title="50%" style="width: 50%"></div> 
+							 				</div> 
+							 			</div> 
+							 		</div> 
+							 	</div> 
+							 </div>
 						</div> 
 						<!-- <div class="row"> 
 							<div class="col-md-4"> 
@@ -517,133 +442,149 @@
 <script src="js/charts/flot/demo.js"></script> 
 
 
+<!-- vector map -->
+<script src="js/jvectormap/jquery-jvectormap-1.2.2.min.js"></script> 
+<script src="js/jvectormap/jquery-jvectormap-world-mill-en.js"></script> 
+<script src="js/jvectormap/jquery-jvectormap-us-aea-en.js"></script> 
+<script src="js/jvectormap/demo.js"></script>
+
+
 
 <script type="text/javascript">
-	var d0 = [];
-    var d00 = [];
+  var mas = [];
+  <% @wifis.each do |wifi| %>
+	mas.push({latLng: [<%= wifi.lat %>, <%= wifi.long %>], name: '<%= wifi.name %>'});
+  <% end %>
 
-	<% @connections.each_with_index do |con , ind| %>
-	  d0.push([<%= ind %>, parseInt(Math.floor(<%= con.download_data %>))]);
-	  d00.push([<%= ind %>, parseInt(Math.floor(<%= con.upload_data %>))]);
-	<% end %>
-
-  $("#flot-sp1ine").length && $.plot($("#flot-sp1ine"), [
-          d0, d00
-      ],
-      {
-        series: {
-            lines: {
-                show: false
-            },
-            splines: {
-              show: true,
-              tension: 0.4,
-              lineWidth: 1,
-              fill: 0.4
-            },
-            points: {
-                radius: 0,
-                show: true
-            },
-            shadowSize: 2
+  $('#world_map').vectorMap({
+      map: 'world_mill_en',
+      normalizeFunction: 'polynomial',
+      backgroundColor: '#fff',            
+      regionStyle: {
+        initial: {
+          fill: '#36424f'
         },
-        grid: {
-            hoverable: true,
-            clickable: true,
-            tickColor: "#d9dee9",
-            borderWidth: 1,
-            color: '#d9dee9'
+       hover: {
+          fill: '#177bbb'
         },
-        colors: [ "#644688","#19b39b"],
-        xaxis:{
-        },
-        yaxis: {
-          ticks: 4
-        },
-        tooltip: true,
-        tooltipOpts: {
-          content: "Data: %x.1 is %y.4",
-          defaultTheme: false,
-          shifts: {
-            x: 0,
-            y: 20
-          }
+      },
+      markerStyle: {
+        initial: {
+          fill: '#1ccc88',
+          stroke: '#fff'
         }
-      }
-  );
-
-   var less2 = 0 ;
-   var less4 = 0 ;
-   var less8 = 0 ;
-   var less16 = 0 ;
-   var great16 = 0 ;
-
-  	<% @wifis.each do |wifi| %>
-  		if(<%= wifi.avg_speed.present? %>){
-	  		if(<%= wifi.avg_speed %> <= 2048){
-	  			less2 = less2 + 1;
-	  		}else
-	  		if(<%= wifi.avg_speed %> <= 4096){
-	  			less4 = less4 + 1;
-	  		}else
-	  		if(<%= wifi.avg_speed %> <= 8192){
-	  			less8 = less8 + 1;
-	  		}else
-	  		if(<%= wifi.avg_speed %> <= 16384){
-	  			less16 = less16 +1;
-	  		}else
-	  		if(<%= wifi.avg_speed %> > 16384){
-	  			great16 = great16 + 1 ;
-	  		}
-	  	}
-	<% end %>
-
-	var da = [
-	    {
-	      label: "2 MB",
-	      data: less2
-	    },    
-	    {
-	      label: "4 MB",
-	      data: less4
-	    },
-	    {
-	      label: "8 MB",
-	      data: less8
-	    },
-	    {
-	      label: "16 MB",
-	      data: less16
-	    },
-	    {
-	      label: "More than 16 MB",
-	      data: great16
-	    }
-	  ];
-
-    $("#flot-pie-donut").length && $.plot($("#flot-pie-donut"), da, {
-    series: {
-      pie: {
-        innerRadius: 0.4,
-        show: true,
-        stroke: {
-          width: 0
-        },
-        label: {
-          show: true,
-          threshold: 0.05
-        },
-
-      }
-    },
-    colors: ["#65b5c2","#4da7c1","#3993bb","#2e7bad","#23649e"],
-    grid: {
-        hoverable: true,
-        clickable: false
-    },
-    tooltip: true,
-    tooltipOpts: {
-      content: "%s: %p.0%"
-    }
-  });
+      },
+      markers: mas
+    });
 </script>
+
+
+<div class="hidden">
+
+							<div class="col-md-6 dker"> 
+								<section> 
+									<header class="font-bold padder-v"> 
+										<!-- <div class="pull-right"> 
+											<div class="btn-group"> 
+												<button data-toggle="dropdown" class="btn btn-sm btn-rounded btn-default dropdown-toggle">
+													<span class="dropdown-label">Week</span> 
+													<span class="caret"></span> 
+												</button> 
+												<ul class="dropdown-menu dropdown-select"> 
+													<li>
+														<a href="index.html#">
+															<input type="radio" name="b">Month
+														</a>
+													</li> 
+													<li>
+														<a href="index.html#">
+															<input type="radio" name="b">Week
+														</a>
+													</li> 
+													<li>
+														<a href="index.html#">
+															<input type="radio" name="b">Day
+														</a>
+													</li> 
+												</ul> 
+											</div> 
+											<a href="index.html#" class="btn btn-default btn-icon btn-rounded btn-sm">Go</a> 
+										</div> --> Data Usage
+									</header> 
+									<div class="panel-body"> 
+										<div id="flot-sp1ine" style="height:210px"></div> 
+									</div> 
+									<div class="row text-center no-gutter"> 
+										<div class="col-xs-6"> 
+											<span class="h4 font-bold m-t block"><%= (@download_data/1024).round(2) %> GB</span> 
+											<small class="text-muted m-b block">Download Data</small> 
+										</div> 
+										<!-- <div class="col-xs-3"> 
+											<span class="h4 font-bold m-t block"><%= @wifis.count %></span> 
+											<small class="text-muted m-b block">Wifis</small> 
+										</div> 
+										<div class="col-xs-3"> 
+											<span class="h4 font-bold m-t block"><%= @connections.count %></span> 
+											<small class="text-muted m-b block">Connections</small> 
+										</div>  -->
+										<div class="col-xs-6"> 
+											<span class="h4 font-bold m-t block"><%= (@upload_data/1024).round(2) %> GB</span> 
+											<small class="text-muted m-b block">Upload Data</small> 
+										</div> 
+									</div> 
+								</section> 
+							</div> 
+							<div class="col-md-6"> 
+								<section> 
+									<header class="font-bold padder-v"> 
+										<!-- <div class="btn-group pull-right"> 
+											<button data-toggle="dropdown" class="btn btn-sm btn-rounded btn-default dropdown-toggle"> 
+												<span class="dropdown-label">Last 24 Hours</span> 
+												<span class="caret"></span> 
+											</button> 
+											<ul class="dropdown-menu dropdown-select"> 
+												<li>
+													<a href="index.html#">
+														<input type="radio" name="a">Today
+													</a>
+												</li> 
+												<li>
+													<a href="index.html#">
+														<input type="radio" name="a">Yesterday
+													</a>
+												</li> 
+												<li>
+													<a href="index.html#">
+														<input type="radio" name="a">Last 24 Hours
+													</a>
+												</li> 
+												<li>
+													<a href="index.html#">
+														<input type="radio" name="a">Last 7 Days
+													</a>
+												</li> 
+												<li>
+													<a href="index.html#">
+														<input type="radio" name="a">Last 30 days
+													</a>
+												</li> 
+												<li>
+													<a href="index.html#">
+														<input type="radio" name="a">Last Month
+													</a>
+												</li> 
+												<li>
+													<a href="index.html#">
+														<input type="radio" name="a">All Time
+													</a>
+												</li> 
+											</ul> 
+										</div> --> Wifi Speed
+									</header> 
+									<div class="panel-body flot-legend"> 
+										<div id="flot-pie-donut" style="height:240px"></div> 
+									</div> 
+								</section> 
+							</div>
+
+</div>
