--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="js/jvectormap/jquery-jvectormap-1.2.2.css" type="text/css" />
 <section > 
 				<section class="vbox"> 
 					<section class="scrollable padder"> 
