scrolling & earning charts

--- a/app/views/admin/connections.html.erb
+++ b/app/views/admin/connections.html.erb
@@ -1,3 +1,5 @@
+<section > 
+<section class="vbox"> 
 <section class="scrollable padder"> 
 	<div class=""> 
 			<section> 
@@ -279,6 +281,8 @@
 			</table> 
 		</div> 
 	</section> 
+</section>
+</section>
 </section>
 
 
