--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,3 +1,5 @@
+<section > 
+<section class="vbox"> 
 <section class="scrollable padder"> 
 	<div class="m-b-md"> 
 		<!-- <h3 class="m-b-none">Users</h3>  -->
@@ -31,6 +33,8 @@
 			</table> 
 		</div> 
 	</section> 
+</section>
+</section>
 </section>
 
 <script>
