--- a/app/views/admin/wifi_table.html.erb
+++ b/app/views/admin/wifi_table.html.erb
@@ -1,3 +1,5 @@
+<section > 
+<section class="vbox"> 
 <section class="scrollable padder"> 
 	<div class="row"> 
 		<div class="col-md-6">
@@ -143,7 +145,8 @@
 		</div> 
 	</section> 
 </section>
-
+</section>
+</section>
 
 
 
