--- a/app/views/admin/payments.html.erb
+++ b/app/views/admin/payments.html.erb
@@ -1,16 +1,18 @@
+<section > 
+<section class="vbox"> 
 <section class="scrollable padder"> 
 	<div class="row">
 		<div class="col-md-6"> 
 			<section class="panel panel-default"> 
-				<header class="panel-heading"> Conversion </header> 
+				<header class="panel-heading"> Wifi Lender's Earning </header> 
 				<div class="panel-body text-center"> 
-					<h4>62.5<small> hrs</small></h4> 
+					<h4><%= ((@total_earning * 0.90)/1000).round(2) %><small> K</small></h4> 
 					<small class="text-muted block">Updated at 2 minutes ago</small> 
 					<div class="inline"> 
-						<div class="easypiechart" data-percent="75" data-bar-color="#fcc633" data-line-width="16" data-loop="false" data-size="188"> 
+						<div class="easypiechart" data-percent="90" data-bar-color="#fcc633" data-line-width="16" data-loop="false" data-size="188"> 
 							<div> 
-								<span class="h2 m-l-sm step">75</span>% 
-								<div class="text text-sm">new</div> 
+								<span class="h2 m-l-sm step">90</span>% 
+								<!-- <div class="text text-sm">new</div> --> 
 							</div> 
 						</div> 
 					</div> 
@@ -22,21 +24,52 @@
 		</div>
 		<div class="col-md-6">
 			<section class="panel panel-default"> 
-				<header class="panel-heading"> New visitors </header> 
+				<header class="panel-heading"> Our Earning </header> 
 				<div class="panel-body text-center"> 
-					<h4>3,450</h4> 
+					<h4><%= ((@total_earning * 0.10)/1000).round(2) %><small> K</small></h4> 
 					<small class="text-muted block">Worldwide visitors</small> 
 					<div class="inline"> 
-						<div class="easypiechart" data-percent="60" data-line-width="10" data-track-color="#eee" data-bar-color="#1ccc88" data-scale-color="#fff" data-size="188" data-line-cap='butt'> 
+						<div class="easypiechart" data-percent="10" data-line-width="10" data-track-color="#eee" data-bar-color="#1ccc88" data-scale-color="#fff" data-size="188" data-line-cap='butt'> 
 							<div> 
-								<span class="h2 m-l-sm step">60</span>% 
-								<div class="text text-sm">new visits</div> 
+								<span class="h2 m-l-sm step">10</span>% 
+								<!-- <div class="text text-sm">new visits</div>  -->
 							</div> 
 						</div> 
 					</div> 
 				</div> 
 				<div class="panel-footer">
 					<small>% of avarage rate of the visits</small>
+				</div> 
+			</section>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<section class="panel panel-default"> 
+				<header class="panel-heading font-bold">Earning</header> 
+				<div class="bg-light dk wrapper"> 
+					<span class="pull-right"><%= Time.now.strftime("%A") %></span> 
+					<span class="h4">$<%= (@total_earning/1000).round(2) %> K</span> 
+					<div class="text-center m-b-n m-t-sm"> 
+						<div class="sparkline" data-type="line" data-height="280" data-width="100%" data-line-width="2" data-line-color="#dddddd" data-spot-color="#bbbbbb" data-fill-color="" data-highlight-line-color="#fff" data-spot-radius="3" data-resize="true" values="<%= @lender_earning %>"></div> 
+						<div class="sparkline inline" data-type="bar" data-height="150" data-bar-width="6" data-bar-spacing="6" data-bar-color="#1ccc88"><%= @our_earning %></div> 
+					</div> 
+				</div> 
+				<div class="panel-body"> 
+					<div class="row"> 
+						<div class="col-xs-4"> 
+							<small class="text-muted block">Total Earning</small> 
+							<span>$<%= (@total_earning/1000).round(2)%> K</span> 
+						</div> 
+						<div class="col-xs-4"> 
+							<small class="text-muted block">Lender's Earning</small> 
+							<span>$<%= ((@total_earning*0.90)/1000).round(2) %> K</span> 
+						</div> 
+						<div class="col-xs-4"> 
+							<small class="text-muted block">Our Earning</small> 
+							<span>$<%= ((@total_earning*0.10)/1000).round(2) %> K</span> 
+						</div> 
+					</div> 
 				</div> 
 			</section>
 		</div>
@@ -73,7 +106,7 @@
 					<tr>
 						<td><%= wifi.name %></td>
 						<td><%= use %></td>
-						<td><%= earn.round(2) %></td>
+						<td><%= (earn/1000).round(2) %> K</td>
 						<td><%= wifi.connections.count %></td>
 					</tr>
 					<% end %>
@@ -81,6 +114,8 @@
 			</table> 
 		</div> 
 	</section> 
+</section>
+</section>
 </section>
 
 <script>
@@ -95,6 +130,8 @@
     });
   });
 </script>
+
+<script src="js/charts/sparkline/jquery.sparkline.min.js"></script>
 
  <script src="js/charts/easypiechart/jquery.easy-pie-chart.js"></script> 
 
