--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -14,10 +14,11 @@
 					<tr> 
 						<th width="14%">First Name</th> 
 						<th width="14%">Last Name</th> 
-						<th width="20%">Email</th> 
+						<th width="15%">Email</th> 
 						<th width="15%">Mobile Number</th> 
 						<th width="22%">Successfully Terminated</th>
 						<th width="15%">Block Access</th>
+						<th width="5%">Reset Password</th>
 					</tr> 
 				</thead> 
 				<tbody> 
@@ -28,9 +29,54 @@
 						<td><%= user.email %></td>
 						<td><%= user.mobile_number %></td>
 						<td><%= user.terminated_successfully ? 'Yes' : 'No' %></td>
-						<td><%= user.blocked ? link_to('Yes' , unblock_user_path(user.id)) : link_to('No' , block_user_path(user.id)) %>
+						<td><%= user.blocked ? link_to('Blocked' , unblock_user_path(user.id) , class: 'btn btn-danger') : link_to('Block' , block_user_path(user.id) , class: 'btn btn-success') %>
 						</td>
+						<td><%= link_to 'Reset', "#user_reset_#{user.id}", "data-toggle" => "modal" , class: 'btn btn-primary' %></td>
 					</tr>
+
+
+					<div class="modal fade" id="user_reset_<%= user.id%>" role="dialog">
+					    <div class="modal-dialog">
+					    
+					      <!-- Modal content-->
+					      <div class="modal-content">
+					        <div class="modal-header">
+					          <button type="button" class="close" data-dismiss="modal">&times;</button>
+					          <h4 class="modal-title" style="text-align: center;"><%= user.email %></h4>
+					        </div>
+					        <div class="modal-body">
+					          <div class="container-fluid bd-example-row">
+					          
+					          <%= form_tag(reset_password_admin_path(user.id), method: "post") do %>
+					         	<div class="row form-group" >
+					        		<div class="col-md-4">
+					         			<strong>Password: </strong>
+					         		</div>
+					         		<div class="col-md-8">
+					         			<%= password_field_tag(:password , '' , class: 'form-control') %>
+					         		</div>
+					         	</div>
+					         	<div class="row form-group">
+					        		<div class="col-md-4">
+					         			<strong>Confirm Password: </strong>
+					         		</div>
+					         		<div class="col-md-8">
+					         			<%= password_field_tag(:c_password ,  '' , class: 'form-control') %>
+					         		</div>
+					         	</div>
+					          </div>           
+					        </div>
+					        <div class="modal-footer">
+					          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					          <%= submit_tag("Reset" , class: "btn btn-success" ) %>
+							<% end %>
+					        </div>
+					      </div>
+					      
+					    </div>
+					  </div>
+
+
 					<% end %>
 				</tbody> 
 			</table> 
