--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -414,6 +414,16 @@
 											</li> 
 										</ul>  -->
 									</li> 
+									<li id='block_007' class="">
+										<a href="<%= block_path %>">
+											<span class="pull-right text-muted"> 
+												<i class="i i-circle-sm-o text"></i> 
+												<i class="i i-circle-sm text-active"></i> 
+											</span> 
+											<i class="fa fa-lock icon"> </i> 
+											<span class="font-bold">Block</span> 
+										</a>
+									</li>
 									<li id='signout_007' class="">
 										<a onclick="signout_ajax();">
 											<span class="pull-right text-muted"> 
@@ -424,7 +434,7 @@
 											<span class="font-bold">Sign Out</span> 
 										</a>
 									</li>
-											
+										
 								 <!-- <li > 
 								 	<a href="index.html#" class="auto"> 
 								 		<span class="pull-right text-muted"> 
