--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -424,6 +424,16 @@
 											<span class="font-bold">Statistics</span> 
 										</a>
 									</li>
+									<li id='stripe_007' class="">
+										<a href="<%= stripe_path %>">
+											<span class="pull-right text-muted"> 
+												<i class="i i-circle-sm-o text"></i> 
+												<i class="i i-circle-sm text-active"></i> 
+											</span> 
+											<i class="fa fa-skype icon"> </i> 
+											<span class="font-bold">Stripe</span> 
+										</a>
+									</li>
 									<li id='block_007' class="">
 										<a href="<%= block_path %>">
 											<span class="pull-right text-muted"> 
@@ -689,6 +699,8 @@
 			$("#user_007").addClass("active");
 		<% elsif request.url.include? "admin/statistics" %>
 			$("#stats_007").addClass("active");
+		<% elsif request.url.include? "admin/stripe" %>
+			$("#stripe_007").addClass("active");
 		<% end %>
 	</script>
 
