termin sucess make true and bug check

--- a/app/views/admin/term_success_false.html.erb
+++ b/app/views/admin/term_success_false.html.erb
@@ -16,7 +16,7 @@
 						<th>Last Name</th> 
 						<th>Email</th> 
 						<th>Mobile Number</th> 
-						<th>Terminated</th>
+						<th>Defaulter</th>
 					</tr> 
 				</thead> 
 				<tbody> 
