--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -450,7 +450,7 @@
 												<i class="i i-circle-sm-o text"></i> 
 												<i class="i i-circle-sm text-active"></i> 
 											</span> 
-											<i class="fa fa-lock icon"> </i> 
+											<i class="fa fa-ban icon"> </i> 
 											<span class="font-bold">Defaulter</span> 
 										</a>
 									</li>
