--- a/app/views/admin/term_success_false.html.erb
+++ b/app/views/admin/term_success_false.html.erb
@@ -5,7 +5,7 @@
 		<!-- <h3 class="m-b-none">Users</h3>  -->
 	</div> 
 	<section class="panel panel-default"> 
-		<header class="panel-heading"> Users 
+		<header class="panel-heading"> Defaulters 
 			<i class="fa fa-info-sign text-muted" ></i> 
 		</header> 
 		<div class="table-responsive"> 
