--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -12,8 +12,8 @@
 			<table id='users' class="table table-striped m-b-none" data-ride="datatables"> 
 				<thead> 
 					<tr> 
-						<th>First Name</th> 
-						<th>Last Name</th> 
+						<!-- <th>First Name</th> 
+						<th>Last Name</th>  -->
 						<th>Email</th> 
 						<th>Mobile Number</th> 
 						<th>Last Signin</th>
@@ -21,13 +21,14 @@
 						<th>Successfully Terminated</th>
 						<th>Block Access</th>
 						<th>Reset Password</th>
+						<th>Delete</th>
 					</tr> 
 				</thead> 
 				<tbody> 
 					<% @user.each do |user| %>
 					<tr>
-						<td><%= user.first_name.present? ? user.first_name.capitalize : '' %></td>
-						<td><%= user.last_name.present? ? user.last_name.capitalize : '' %></td>
+						<!-- <td><%= user.first_name.present? ? user.first_name.capitalize : '' %></td>
+						<td><%= user.last_name.present? ? user.last_name.capitalize : '' %></td> -->
 						<td><%= user.email %></td>
 						<td><%= user.mobile_number %></td>
 						<td><%= user.api_key.present? ? time_ago_in_words(user.api_key.updated_at)+" ago" : "" %></td>
@@ -36,6 +37,7 @@
 						<td><%= user.blocked ? link_to('Blocked' , unblock_user_path(user.id) , class: 'btn btn-danger') : link_to('Block' , block_user_path(user.id) , class: 'btn btn-success') %>
 						</td>
 						<td><%= link_to 'Reset', "#user_reset_#{user.id}", "data-toggle" => "modal" , class: 'btn btn-primary' %></td>
+						<td><%= link_to 'Delete', user_destroy_path(user.id) , class: 'btn btn-danger' %></td>
 					</tr>
 
 
